--- a/package.json
+++ b/package.json
@@ -9,12 +9,15 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "@react-oauth/google": "^0.11.1",
     "axios": "^0.21.1",
     "bootstrap": "^5.2.3",
     "bootstrap-icons": "^1.11.1",
+    "jwt-decode": "^3.1.2",
     "react": "^18.2.0",
     "react-bootstrap-icons": "^1.10.3",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "react-router-dom": "^6.16.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
